Fixed STR and removed admin unit unique code check

--- a/ui/ui_adminUnitManager.ui
+++ b/ui/ui_adminUnitManager.ui
@@ -91,7 +91,7 @@
        </widget>
       </item>
       <item>
-       <widget class="ValidatingLineEdit" name="txtUnitCode">
+       <widget class="QLineEdit" name="txtUnitCode">
         <property name="minimumSize">
          <size>
           <width>0</width>
