--- a/ui/geometry/ui_geometry_container.ui
+++ b/ui/geometry/ui_geometry_container.ui
@@ -15,10 +15,7 @@
   </property>
   <widget class="QWidget" name="dockWidgetContents">
    <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="1" colspan="2">
-     <widget class="QComboBox" name="geom_tools_combo"/>
-    </item>
-    <item row="3" column="0">
+    <item row="6" column="0">
      <spacer name="verticalSpacer">
       <property name="orientation">
        <enum>Qt::Vertical</enum>
@@ -38,12 +35,18 @@
       </property>
      </widget>
     </item>
-    <item row="1" column="0" rowspan="2" colspan="3">
+    <item row="0" column="1" colspan="2">
+     <widget class="QComboBox" name="geom_tools_combo"/>
+    </item>
+    <item row="4" column="0" rowspan="2" colspan="3">
      <widget class="QStackedWidget" name="geom_tools_widgets">
       <property name="currentIndex">
        <number>-1</number>
       </property>
      </widget>
+    </item>
+    <item row="1" column="0" colspan="3">
+     <layout class="QVBoxLayout" name="notice_box"/>
     </item>
    </layout>
   </widget>
