--- a/ui/geometry/ui_join_points.ui
+++ b/ui/geometry/ui_join_points.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>265</height>
+    <height>272</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -22,7 +22,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLabel" name="label_27">
+    <widget class="QLabel" name="sel_features_lbl">
      <property name="text">
       <string>0</string>
      </property>
@@ -36,7 +36,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLabel" name="label_9">
+    <widget class="QLabel" name="selected_line_lbl">
      <property name="text">
       <string>0</string>
      </property>
@@ -71,21 +71,21 @@
     </widget>
    </item>
    <item row="5" column="1">
-    <widget class="QPushButton" name="pushButton_8">
+    <widget class="QPushButton" name="preview_btn">
      <property name="text">
       <string>Preview</string>
      </property>
     </widget>
    </item>
    <item row="5" column="0">
-    <widget class="QPushButton" name="pushButton_7">
+    <widget class="QPushButton" name="cancel_btn">
      <property name="text">
       <string>Cancel</string>
      </property>
     </widget>
    </item>
    <item row="5" column="2">
-    <widget class="QPushButton" name="pushButton_9">
+    <widget class="QPushButton" name="save_btn">
      <property name="text">
       <string>Save</string>
      </property>
