--- a/ui/geometry/ui_move_line_area.ui
+++ b/ui/geometry/ui_move_line_area.ui
@@ -22,24 +22,28 @@
     </widget>
    </item>
    <item row="3" column="0">
-    <widget class="QPushButton" name="pushButton_6">
+    <widget class="QPushButton" name="cancel_btn">
      <property name="text">
       <string>Cancel</string>
      </property>
     </widget>
    </item>
    <item row="2" column="1" colspan="3">
-    <widget class="QDoubleSpinBox" name="doubleSpinBox_3"/>
+    <widget class="QDoubleSpinBox" name="split_polygon_area">
+     <property name="maximum">
+      <double>99999999.989999994635582</double>
+     </property>
+    </widget>
    </item>
    <item row="3" column="1">
-    <widget class="QPushButton" name="pushButton_5">
+    <widget class="QPushButton" name="preview_btn">
      <property name="text">
       <string>Preview</string>
      </property>
     </widget>
    </item>
    <item row="3" column="3">
-    <widget class="QPushButton" name="pushButton_4">
+    <widget class="QPushButton" name="save_btn">
      <property name="text">
       <string>Save</string>
      </property>
@@ -53,7 +57,7 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLabel" name="label_23">
+    <widget class="QLabel" name="sel_features_lbl">
      <property name="text">
       <string>0</string>
      </property>
@@ -67,7 +71,7 @@
     </widget>
    </item>
    <item row="1" column="1" colspan="2">
-    <widget class="QLabel" name="label_31">
+    <widget class="QLabel" name="selected_line_lbl">
      <property name="text">
       <string>0</string>
      </property>
