--- a/ui/geometry/ui_offset_distance.ui
+++ b/ui/geometry/ui_offset_distance.ui
@@ -15,7 +15,7 @@
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="1">
-    <widget class="QLabel" name="label_25">
+    <widget class="QLabel" name="sel_features_lbl">
      <property name="text">
       <string>0</string>
      </property>
@@ -39,7 +39,7 @@
     </widget>
    </item>
    <item row="1" column="1">
-    <widget class="QLabel" name="label_29">
+    <widget class="QLabel" name="selected_line_lbl">
      <property name="text">
       <string>0</string>
      </property>
@@ -74,21 +74,21 @@
     </widget>
    </item>
    <item row="4" column="0">
-    <widget class="QPushButton" name="pushButton_6">
+    <widget class="QPushButton" name="cancel_btn">
      <property name="text">
       <string>Cancel</string>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
-    <widget class="QPushButton" name="pushButton_5">
+    <widget class="QPushButton" name="preview_btn">
      <property name="text">
       <string>Preview</string>
      </property>
     </widget>
    </item>
    <item row="4" column="2">
-    <widget class="QPushButton" name="pushButton_4">
+    <widget class="QPushButton" name="save_btn">
      <property name="text">
       <string>Save</string>
      </property>
