--- a/ui/geometry/ui_one_point_area.ui
+++ b/ui/geometry/ui_one_point_area.ui
@@ -48,7 +48,7 @@
     </widget>
    </item>
    <item row="6" column="1">
-    <widget class="QPushButton" name="pushButton_11">
+    <widget class="QPushButton" name="preview_btn">
      <property name="text">
       <string>Preview</string>
      </property>
@@ -62,14 +62,14 @@
     </widget>
    </item>
    <item row="0" column="1">
-    <widget class="QLabel" name="label_5">
+    <widget class="QLabel" name="sel_features_lbl">
      <property name="text">
       <string>0</string>
      </property>
     </widget>
    </item>
    <item row="1" column="1" colspan="2">
-    <widget class="QLabel" name="label_20">
+    <widget class="QLabel" name="selected_line_lbl">
      <property name="text">
       <string>0</string>
      </property>
@@ -121,14 +121,14 @@
     <widget class="QDoubleSpinBox" name="doubleSpinBox_5"/>
    </item>
    <item row="6" column="0">
-    <widget class="QPushButton" name="pushButton_10">
+    <widget class="QPushButton" name="cancel_btn">
      <property name="text">
       <string>Cancel</string>
      </property>
     </widget>
    </item>
    <item row="6" column="2">
-    <widget class="QPushButton" name="pushButton_12">
+    <widget class="QPushButton" name="save_btn">
      <property name="text">
       <string>Save</string>
      </property>
