--- a/ui/geometry/ui_one_point_area.ui
+++ b/ui/geometry/ui_one_point_area.ui
@@ -66,9 +66,9 @@
     </spacer>
    </item>
    <item row="8" column="3">
-    <widget class="QPushButton" name="save_btn">
+    <widget class="QPushButton" name="run_btn">
      <property name="text">
-      <string>Save</string>
+      <string>Run</string>
      </property>
     </widget>
    </item>
