--- a/ui/geometry/ui_move_line_area.ui
+++ b/ui/geometry/ui_move_line_area.ui
@@ -39,9 +39,9 @@
     </widget>
    </item>
    <item row="3" column="4">
-    <widget class="QPushButton" name="save_btn">
+    <widget class="QPushButton" name="run_btn">
      <property name="text">
-      <string>Save</string>
+      <string>Run</string>
      </property>
     </widget>
    </item>
