--- a/ui/wizard/ui_fk_property.ui
+++ b/ui/wizard/ui_fk_property.ui
@@ -73,16 +73,6 @@
      </property>
     </widget>
    </item>
-   <item row="2" column="1">
-    <widget class="QListView" name="lvDisplayCol">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>1</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-    </widget>
-   </item>
    <item row="5" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
@@ -96,14 +86,38 @@
    <item row="3" column="1">
     <widget class="QCheckBox" name="show_in_parent_chk">
      <property name="text">
-      <string>Show in parent form</string>
+      <string/>
      </property>
     </widget>
    </item>
    <item row="4" column="1">
     <widget class="QCheckBox" name="show_in_child_chk">
      <property name="text">
-      <string>Show in child form</string>
+      <string/>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="label_4">
+     <property name="text">
+      <string>Hide sub-form:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="label_5">
+     <property name="text">
+      <string>Hide column in form:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="2" column="1">
+    <widget class="QListView" name="lvDisplayCol">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+       <horstretch>1</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
      </property>
     </widget>
    </item>
