Added saving of feature add/change at the end

--- a/resources.qrc
+++ b/resources.qrc
@@ -107,6 +107,6 @@
     <file>images/icons/custom_tenure.png</file>
     <file>images/icons/geometry_tools.png</file>
     <file>images/icons/advanced_search.png</file>
-
+    <file>images/icons/geometry_map_tool.png</file>
   </qresource>
 </RCC>
