--- a/ui/geometry/ui_show_measurements.ui
+++ b/ui/geometry/ui_show_measurements.ui
@@ -10,6 +10,18 @@
     <height>416</height>
    </rect>
   </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Preferred">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>16777215</width>
+    <height>416</height>
+   </size>
+  </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
