--- a/ui/ui_feature_details.ui
+++ b/ui/ui_feature_details.ui
@@ -7,8 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>300</height>
+    <height>320</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>114</width>
+    <height>300</height>
+   </size>
   </property>
   <property name="allowedAreas">
    <set>Qt::AllDockWidgetAreas</set>
@@ -145,7 +151,7 @@
          <x>0</x>
          <y>0</y>
          <width>378</width>
-         <height>221</height>
+         <height>241</height>
         </rect>
        </property>
       </widget>
