Fixed discard delete issue and hide label issue

--- a/ui/forms/ui_spatial_forms_container.ui
+++ b/ui/forms/ui_spatial_forms_container.ui
@@ -77,7 +77,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
+      <set>QDialogButtonBox::Save</set>
      </property>
     </widget>
    </item>
